# SynSourceMapper

./: .gitignore  README.md  example_config.yaml  pyproject.toml  test.py  tst.py
.history/: .gitignore_20250526095036  README_20250422153751.md  README_20250526095249.md  README_20250526095356.md
acoustic/: __init__.py
acoustic/beamforming/: __init__.py  conventional.py  functions.py
acoustic/data/: __init__.py  array_positions.py
acoustic/datasets/: __init__.py  dataset.py
acoustic/utils/: __init__.py  math_utils.py  matrix_utils.py  path_utils.py
arraybox/: MIRACLE.npy  __init__.py
configs/: dataset_1.yaml
datasets/: __init__.py  acoustic_imaging.py
